[package]
name = "hibiki"
version = "0.1.0"
authors = ["Tianyi <ShiTianyi2001@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3.0"
globset = "0.4.6"
iced = {path = "../../Github/iced", features = ["image", "svg"]}
id3 = "0.5.1"
rusqlite = "0.24.1"
